[package]
name = "standard_test"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
license = "MITNFA"
repository = "https://github.com/Kixunil/standard_test"
description = "A set of tests checking the properties of your impls of std traits"
categories = ["rust-patterns", "development-tools::testing"]
keywords = ["testing", "traits"]
readme = "README.md"
edition = "2018"
rust-version = "1.63"

[features]
default = ["arbitrary"]

[dependencies]
arbitrary = { version = "1.0", optional = true }
